--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 $primary-color: #444;
+$secondary-color: #eece1a;
 
 * {
   box-sizing: border-box;
@@ -35,4 +36,32 @@ h3 {
 a {
   color: #fff;
   text-decoration: none;
+}
+
+// Header
+header {
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+}
+
+.text-secondary {
+  color: $secondary-color;
+}
+
+main {
+  padding: 4rem;
+  height: 100%;
+
+  .icons {
+    margin-top: 1rem;
+
+    a {
+      padding: 0.6rem;
+
+      &:hover {
+        color: $secondary-color;
+      }
+    }
+  }
 }
