--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,10 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
 
+@mixin easeOut {
+  transition: all 0.7s ease-out;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -57,11 +61,19 @@ main {
     margin-top: 1rem;
 
     a {
-      padding: 0.6rem;
+      padding: 0.5rem;
 
       &:hover {
         color: $secondary-color;
+        @include easeOut();
       }
+    }
+  }
+
+  &#home {
+    overflow: hidden;
+    h1 {
+      margin-top: 20vh;
     }
   }
 }
