--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -82,5 +82,18 @@
     background: $primary-color;
     transform: translate3d(0, 100%, 0);
     @include easeOut;
+
+    &.show {
+      // Slide in from bottom
+      transform: translate3d(0, 0, 0);
+    }
+
+    .portrait {
+      width: 250px;
+      height: 250px;
+      background: url("../img/me.jpg");
+      border-radius: 50%;
+      border: solid 3px $secondary-color;
+    }
   }
 }
