--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -91,9 +91,19 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url("../img/me.jpg");
+      background: url("../img/me.jpeg");
       border-radius: 50%;
       border: solid 3px $secondary-color;
+    }
+  }
+
+  .nav-item {
+    transform: translate3d(600px, 0, 0);
+    @include easeOut;
+
+    &.show {
+      // Slide in from right
+      transform: translate3d(0, 0, 0);
     }
   }
 }
