--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -44,7 +44,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.9;
+  opacity: 0.95;
   visibility: hidden;
 
   &.show {
@@ -98,12 +98,19 @@
   }
 
   .nav-item {
-    transform: translate3d(600px, 0, 0);
-    @include easeOut;
+    // transform: translate3d(600px, 0, 0);
+    // @include easeOut;
 
     &.show {
       // Slide in from right
       transform: translate3d(0, 0, 0);
+    }
+  }
+
+  // Delay each nav item slide by 0.1s
+  @for $x from 1 through 4 {
+    .nav-item:nth-child(#{$x}) {
+      transition-delay: $x * 0.1s;
     }
   }
 }
