--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -31,7 +31,7 @@ $background-opacity: 0.9;
 
 // Media Query Mixins
 @mixin mediaSm {
-  @media screen and (max-width: 500px) {
+  @media screen and (max-width: 450px) {
     @content;
   }
 }
@@ -48,7 +48,7 @@ $background-opacity: 0.9;
   }
 }
 
-@mixin mediaXL {
+@mixin mediaXl {
   @media screen and (min-width: 1171px) {
     @content;
   }
