--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -40,7 +40,7 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url("../img/me_small.jpeg");
+      background: url("../img/me_small.jpg");
       width: 150px;
       height: 150px;
     }
