adding media queries to projects page

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,9 +1,15 @@
 // Widescreens
 @include mediaXl {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 // Desktops & Laptops
 @include mediaLg {
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 // Tablets & Small Laptops
@@ -56,6 +62,9 @@
 
     grid-template-columns: 1fr;
   }
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 // Smartphones
@@ -67,5 +76,9 @@
   main#home .text-secondary {
     margin-left: -25px;
     text-align: center;
+  }
+
+  .projects {
+    grid-template-columns: repeat(1fr);
   }
 }
