--- a/scss/main.scss
+++ b/scss/main.scss
@@ -152,6 +152,9 @@ main {
       padding: 0.5rem 1.5rem;
       background: $secondary-color;
       color: set-text-color($secondary-color);
+      span {
+        color: set-text-color($secondary-color);
+      }
     }
   }
 }
