--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -77,7 +77,8 @@
     grid-template-columns: repeat(1fr);
   }
   main#home .text-secondary {
-    margin-left: -25px;
-    text-align: center;
+    // margin-left: -35px;
+    // text-align: center;
+    // @include center;
   }
 }
