--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -74,11 +74,15 @@
   }
 
   .projects {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .boxes {
     grid-template-columns: repeat(1fr);
   }
   main#home .text-secondary {
-    // margin-left: -35px;
-    // text-align: center;
+    margin-left: -35px;
+    text-align: center;
     // @include center;
   }
 }
