adding to contact page

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -73,13 +73,26 @@
     margin-top: 10vh;
   }
 
-  .projects {
-    grid-template-columns: repeat(1, 1fr);
+  main {
+    text-align: center;
+
+    .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
   }
 
-  .boxes {
-    grid-template-columns: repeat(1fr);
+  .projects {
+    grid-template-columns: repeat(1, 1fr);
+    text-align: left;
   }
+
+  .boxes div {
+    padding: 1.5rem 2rem;
+    font-size: 1.5rem;
+  }
+
   main#home .text-secondary {
     margin-left: -35px;
     text-align: center;
