--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -21,6 +21,7 @@
     .lg-heading {
       line-height: 1;
       margin-bottom: 1rem;
+      font-size: 5rem;
     }
   }
 
@@ -65,6 +66,11 @@
   .projects {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  .boxes div {
+    padding: 1rem 2rem;
+    font-size: 1.2rem;
+  }
 }
 
 // Smartphones
@@ -80,17 +86,22 @@
       line-height: 1;
       margin-bottom: 1rem;
       text-align: center;
+      font-size: 4.5rem;
+    }
+
+    .sm-heading {
+      font-size: 1.3rem;
     }
   }
 
   .projects {
     grid-template-columns: repeat(1, 1fr);
-    text-align: left;
+    text-align: center;
   }
 
   .boxes div {
-    padding: 1.5rem 2rem;
-    font-size: 1.5rem;
+    padding: 1rem 2rem;
+    font-size: 1.2rem;
   }
 
   main#home .text-secondary {
