--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@
     .menu-branding .portrait {
       width: 250px;
       height: 250px;
-      background: url("../img/me.jpeg");
+      background: url("../img/me-10.jpg");
       border-radius: 50%;
       border: solid 3px #eece1a; }
   .menu .nav-item.show {
@@ -247,7 +247,8 @@ main {
     text-align: center; }
     main .lg-heading {
       line-height: 1;
-      margin-bottom: 1rem; }
+      margin-bottom: 1rem;
+      font-size: 5rem; }
   ul.menu-nav,
   div.menu-branding {
     float: none;
@@ -271,15 +272,28 @@ main {
     grid-template-areas: "bioimage" "bio" "job1" "job2" "job3";
     grid-template-columns: 1fr; }
   .projects {
-    grid-template-columns: repeat(2, 1fr); } }
+    grid-template-columns: repeat(2, 1fr); }
+  .boxes div {
+    padding: 1rem 2rem;
+    font-size: 1.2rem; } }
 
 @media screen and (max-width: 400px) {
   main#home h1 {
     margin-top: 10vh; }
+  main {
+    text-align: center; }
+    main .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      text-align: center;
+      font-size: 4.5rem; }
+    main .sm-heading {
+      font-size: 1.3rem; }
   .projects {
-    grid-template-columns: repeat(1, 1fr); }
-  .boxes {
-    grid-template-columns: repeat(1fr); }
+    grid-template-columns: repeat(1, 1fr);
+    text-align: center; }
+  .boxes div {
+    padding: 1rem 2rem;
+    font-size: 1.2rem; }
   main#home .text-secondary {
-    margin-left: -35px;
     text-align: center; } }
