--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -105,7 +105,7 @@
   }
 
   main#home .text-secondary {
-    margin-left: -35px;
+    // margin-left: -35px;
     text-align: center;
     // @include center;
   }
