fixing background and adding footer links

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,4 @@
-$primary-color: #444;
+$primary-color: #26292c;
 $secondary-color: #eece1a;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
@@ -6,14 +6,6 @@ $background-opacity: 0.9;
 
 @mixin easeOut {
   transition: all 0.7s ease-out;
-}
-
-@mixin center($width: null, $height: null) {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-
-  // Moar magic here...
 }
 
 @mixin background {
