--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -90,7 +90,7 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url("../img/me-10.jpg");
+      background: url("../img/Me-10.jpg");
       border-radius: 50%;
       border: solid 3px $secondary-color;
     }
