--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -47,7 +47,7 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url("../img/me_small.jpg");
+      background: url("../img/Me-11.jpg");
       width: 150px;
       height: 150px;
     }
