--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -3,6 +3,30 @@
   .projects {
     grid-template-columns: repeat(4, 1fr);
   }
+  .boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
+
+    div {
+      font-size: 2rem;
+      border: 3px #fff solid;
+      padding: 1.5rem 4rem;
+      margin-bottom: 3rem;
+      @include easeOut;
+
+      &:hover {
+        padding: 0.5rem 1.5rem;
+        background: $secondary-color;
+        color: set-text-color($secondary-color);
+        span {
+          color: set-text-color($secondary-color);
+        }
+      }
+    }
+  }
 }
 
 // Desktops & Laptops
@@ -69,7 +93,7 @@
 
   .boxes div {
     padding: 1rem 2rem;
-    font-size: 1.2rem;
+    font-size: 0.5rem;
   }
 }
 
