--- a/scss/main.scss
+++ b/scss/main.scss
@@ -108,6 +108,14 @@ main {
     grid-area: job3;
   }
 
+  #resume {
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+    padding-top: 10%;
+    font-size: 2.75rem;
+  }
+
   .job {
     background: lighten($primary-color, 5);
     padding: 0.5rem;
