--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -106,6 +106,12 @@
     h2 {
       font-size: 3rem;
     }
+    display: none;
+  }
+
+  .about-info .bio {
+    grid-area: bio;
+    font-size: 1.15rem;
   }
 }
 
@@ -144,5 +150,11 @@
     // margin-left: -35px;
     text-align: center;
     // @include center;
+  }
+
+  #skills {
+    h2 {
+      font-size: 2rem;
+    }
   }
 }
