--- a/scss/main.scss
+++ b/scss/main.scss
@@ -76,6 +76,12 @@ main {
   }
 }
 
+// body {
+//   margin: 0;
+//   height: 100%;
+//   overflow: hidden;
+// }
+
 .about-info {
   display: grid;
   grid-gap: 30px;
