--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,6 @@
 $primary-color: #26292c;
 $secondary-color: #eece1a;
+$accent: #03afc2;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
