finishing up css

--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -1,18 +1,32 @@
 .portfolio-modal {
   position: fixed;
   z-index: 10;
-  top: 3rem;
-  bottom: 3rem;
-  left: 3rem;
-  right: 3rem;
+  top: 2em;
+  bottom: 2em;
+  left: 2em;
+  right: 2em;
   background: white;
-  box-shadow: 0 0 0 5em rgba(black, 0.5);
+  box-shadow: 0 0 0 3em rgba(black, 0.9);
   overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.modal-close {
+  background: transparent;
+  position: fixed;
+  left: 3em;
+  top: 4em;
+  border: 0 transparent;
+  width: 2em;
+  height: 2em;
+  padding: 3px -3px;
+  cursor: pointer;
 }
 
 .portfolio-header {
   text-align: left;
   padding: 5em 0;
+  margin-bottom: 2em;
 }
 
 .portfolio-header:nth-of-type(1) {
@@ -40,4 +54,23 @@
       width: 100%;
     }
   }
+}
+
+.portfolio-subtitle {
+  font-size: 1.5rem;
+}
+
+.portfolio-content {
+  text-align: left;
+  width: 85%;
+  margin: 0 auto;
+  padding-bottom: 2em;
+}
+
+.portfolio-full-width {
+  width: 100vw;
+  max-width: initial;
+  margin: 2em calc(50% - 50vw);
+  height: 60vh;
+  object-fit: cover;
 }
