--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -29,17 +29,20 @@
   margin-bottom: 2em;
 }
 
-.portfolio-header:nth-of-type(1) {
-  background-image: url(../dist/img/projects/showcase.jpg);
-  background-size: cover;
-  background-position: center;
-}
+// .portfolio-header:nth-of-type(1) {
+//   background-image: url(../dist/img/projects/showcase.jpg);
+//   background-size: cover;
+//   background-position: center;
+// }
 
 .portfolio-title-box {
   background: rgba($accent, 0.75);
   padding: 3em 0 3em 3em;
   color: white;
   width: 70%;
+  position: absolute;
+  top: 6.45%;
+  left: 2.99%;
 
   .portfolio-title {
     font-size: 3.5rem;
@@ -65,12 +68,11 @@
   width: 85%;
   margin: 0 auto;
   padding-bottom: 2em;
+  color: #000;
 }
 
 .portfolio-full-width {
-  width: 100vw;
-  max-width: initial;
-  margin: 2em calc(50% - 50vw);
-  height: 60vh;
-  object-fit: cover;
+  width: 90vw;
+  margin: 40px 35px;
+  height: 80vh;
 }
