--- a/scss/main.scss
+++ b/scss/main.scss
@@ -155,7 +155,8 @@ body {
   grid-template-columns: repeat(3, 1fr);
 
   img {
-    // width: 100%;
+    width: 100%;
+    height: 210px;
     border: 3px #fff solid;
 
     &:hover {
